# taudit

./: .clippy.toml  .cursorignore  .gitattributes  .gitignore  .gitlab-ci.yml  .gitleaks.toml  .yamllint  .zizmor.yml  AXIOM.md  BUILD_SHEET.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  HANDOVER.md  LICENSE-APACHE  LICENSE-MIT  LICENSE.old  README.md  SECURITY.md  SKILLS.md  SUPPORT.md  THREAT_MODEL.md  TODOS.md  USERGUIDE.md  azure-pipelines.stack-integration.yml  azure-pipelines.taudit-task-smoke.yml  azure-pipelines.vscode-extension.yml  azure-pipelines.yml  bitbucket-pipelines.yml  deny.toml  gaps.md  justfile  pai-axiom-project-harness-target.json  release-plz.toml  rustfmt.toml  standardise-ecosystem.md  taudit.mcpact.toml
.cordance/: pack.json  (+2 more)
crates/taudit-api/: Cargo.toml  README.md
crates/taudit-api/src/: lib.rs
crates/taudit-cli/: Cargo.toml
crates/taudit-cli/src/: error_hints.rs  main.rs  remediate.rs  stdio_epipe.rs
crates/taudit-cli/static/: after-long-help.txt
crates/taudit-cli/tests/: broken_pipe.rs  cli_contract.rs  corpus_cli_suite.rs  cross_sink_contract.rs  exploit_path_graph.rs  graph_summary.rs  hostile_rendering_corpus.rs  integration.rs  output_injection_corpus.rs  phase4_graph_flags.rs  release_workflow_attestation.rs  remediate_contract.rs  rich_labels.rs  rule_firing_benchmark.rs  snapshot_ado.rs  snapshot_gha.rs  snapshot_gitlab.rs  suppression_baseline_exit_matrix.rs
crates/taudit-cli/tests/common/: mod.rs
crates/taudit-cli/tests/snapshots/: snapshot_ado__ado_keyvault_plaintext_findings.snap  snapshot_ado__ado_setvariable_all_findings.snap  snapshot_ado__ado_setvariable_finding_0.snap  snapshot_ado__ado_setvariable_finding_1.snap  snapshot_ado__ado_setvariable_finding_2.snap  snapshot_ado__ado_setvariable_finding_3.snap  snapshot_ado__ado_setvariable_json_report.snap  snapshot_ado__ado_setvariable_sarif_results.snap  snapshot_ado__ado_shared_pool_all_findings.snap  snapshot_ado__ado_shared_pool_finding_0.snap  snapshot_ado__ado_shared_pool_finding_1.snap  snapshot_ado__ado_shared_pool_finding_2.snap  snapshot_ado__ado_shared_pool_finding_3.snap  snapshot_ado__ado_shared_pool_finding_4.snap  snapshot_ado__ado_shared_pool_json_report.snap  snapshot_ado__ado_shared_pool_sarif_results.snap  snapshot_ado__ado_terraform_autoapprove_findings.snap  snapshot_gha__gha_clean_all_findings.snap  snapshot_gha__gha_clean_finding_0.snap  snapshot_gha__gha_clean_json_report.snap  snapshot_gha__gha_clean_sarif_results.snap  snapshot_gha__gha_over_privileged_all_findings.snap  snapshot_gha__gha_over_privileged_finding_0.snap  snapshot_gha__gha_over_privileged_finding_1.snap  snapshot_gha__gha_over_privileged_finding_10.snap  snapshot_gha__gha_over_privileged_finding_11.snap  snapshot_gha__gha_over_privileged_finding_2.snap  snapshot_gha__gha_over_privileged_finding_3.snap  snapshot_gha__gha_over_privileged_finding_4.snap  snapshot_gha__gha_over_privileged_finding_5.snap  snapshot_gha__gha_over_privileged_finding_6.snap  snapshot_gha__gha_over_privileged_finding_7.snap  snapshot_gha__gha_over_privileged_finding_8.snap  snapshot_gha__gha_over_privileged_finding_9.snap  snapshot_gha__gha_over_privileged_json_report.snap  snapshot_gha__gha_over_privileged_sarif_results.snap  snapshot_gha__gha_over_privileged_terminal.snap  snapshot_gha__gha_propagation_all_findings.snap  snapshot_gha__gha_propagation_finding_0.snap  snapshot_gha__gha_propagation_finding_1.snap  (+41 more)
crates/taudit-core/: Cargo.toml  README.md
crates/taudit-core/benches/: bench_custom_rules.rs  bench_propagation.rs  bench_rules.rs
crates/taudit-core/src/: axiom_conformance.rs  baselines.rs  custom_rules.rs  error.rs  evidence.rs  exploit_path.rs  finding.rs  graph.rs  ignore.rs  lib.rs  map.rs  ports.rs  propagation.rs  rules.rs  summary.rs  suppressions.rs
crates/taudit-mcp/: Cargo.toml  README.md
crates/taudit-mcp/.mcpact/hosts/: claude.json  codex.toml
crates/taudit-mcp/.mcpact/tools/: taudit_baseline_init.json  taudit_baseline_list.json  taudit_baseline_promote.json  taudit_baseline_rollback.json  taudit_diff.json  taudit_emit_spec.json  taudit_explain.json  taudit_graph.json  taudit_invariants_explain.json  taudit_invariants_list.json  taudit_map.json  taudit_remediate_apply.json  taudit_remediate_suggest.json  taudit_scan.json  taudit_verify.json
crates/taudit-mcp/src/: main.rs  server_config.rs
crates/taudit-mcp/src/tools/: mod.rs  taudit_baseline_init.rs  taudit_baseline_list.rs  taudit_baseline_promote.rs  taudit_baseline_rollback.rs  taudit_diff.rs  taudit_emit_spec.rs  taudit_explain.rs  taudit_graph.rs  taudit_invariants_explain.rs  taudit_invariants_list.rs  taudit_map.rs  taudit_remediate_apply.rs  taudit_remediate_suggest.rs  taudit_scan.rs  taudit_verify.rs
crates/taudit-mcp/tests/: pack_integrity.rs
crates/taudit-parse-ado/: Cargo.toml  README.md
crates/taudit-parse-ado/benches/: bench_parse.rs
crates/taudit-parse-ado/fuzz/: Cargo.toml
crates/taudit-parse-ado/fuzz/corpus/: seed_minimal.yml  seed_resources_containers_pipelines.yml  seed_resources_secure_files_artifacts.yml  seed_setvariable.yml  seed_shared_pool.yml
crates/taudit-parse-ado/src/: lib.rs
crates/taudit-parse-bitbucket/: Cargo.toml  README.md
crates/taudit-parse-bitbucket/fuzz/: Cargo.toml
crates/taudit-parse-bitbucket/src/: lib.rs
crates/taudit-parse-gha/: Cargo.toml  README.md
crates/taudit-parse-gha/benches/: bench_parse.rs
crates/taudit-parse-gha/fuzz/: Cargo.toml
crates/taudit-parse-gha/src/: lib.rs
crates/taudit-parse-gitlab/: Cargo.toml  README.md
crates/taudit-parse-gitlab/benches/: bench_parse.rs
crates/taudit-parse-gitlab/fuzz/: Cargo.toml
crates/taudit-parse-gitlab/src/: lib.rs
crates/taudit-report-json/: Cargo.toml  README.md
crates/taudit-report-json/src/: lib.rs
crates/taudit-report-sarif/: Cargo.toml  README.md
crates/taudit-report-sarif/src/: lib.rs
crates/taudit-report-terminal/: Cargo.toml  README.md
crates/taudit-report-terminal/src/: lib.rs
crates/taudit-sink-cloudevents/: Cargo.toml  README.md
crates/taudit-sink-cloudevents/src/: lib.rs
(+804 files in other folders)
