[workspace]
resolver = "2"
members = [
    "crates/taudit-core",
    "crates/taudit-cli",
    "crates/taudit-parse-gha",
    "crates/taudit-parse-ado",
    "crates/taudit-parse-gitlab",
    "crates/taudit-report-terminal",
    "crates/taudit-report-json",
    "crates/taudit-report-sarif",
    "crates/taudit-sink-cloudevents",
]

[workspace.package]
edition = "2021"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
authors = ["Ryan Tilcock"]
repository = "https://github.com/0ryant/taudit"
keywords = ["security", "github-actions", "azure-devops", "devsecops", "pipeline-security"]
categories = ["command-line-utilities", "development-tools", "development-tools::testing"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
anyhow = "1"
jsonschema = "0.45"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
colored = "2"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
sha1 = "0.10"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3
