[workspace]
resolver = "2"
members = [
    "crates/taudit-api",
    "crates/taudit-core",
    "crates/taudit-cli",
    "crates/taudit-parse-gha",
    "crates/taudit-parse-ado",
    "crates/taudit-parse-gitlab",
    "crates/taudit-parse-bitbucket",
    "crates/taudit-report-terminal",
    "crates/taudit-report-json",
    "crates/taudit-report-sarif",
    "crates/taudit-sink-cloudevents",
]

[workspace.package]
edition = "2021"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
authors = ["Ryan Tilcock"]
repository = "https://github.com/0ryant/taudit"
homepage = "https://github.com/0ryant/taudit"
documentation = "https://github.com/0ryant/taudit/blob/main/USERGUIDE.md"
keywords = ["security", "authority-graph", "github-actions", "azure-devops", "gitlab-ci"]
categories = ["command-line-utilities", "development-tools", "development-tools::testing"]

[workspace.dependencies]
taudit-api = { version = "0.4", path = "crates/taudit-api" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
anyhow = "1"
jsonschema = "0.45"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
colored = "3"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
sha1 = "0.11"
ureq = { version = "2", features = ["json"] }
semver = "1"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3
