[workspace]
resolver = "2"
members = [
    "crates/taudit-api",
    "crates/taudit-core",
    "crates/taudit-cli",
    "crates/taudit-parse-gha",
    "crates/taudit-parse-ado",
    "crates/taudit-parse-gitlab",
    "crates/taudit-parse-bitbucket",
    "crates/taudit-report-terminal",
    "crates/taudit-report-json",
    "crates/taudit-report-sarif",
    "crates/taudit-sink-cloudevents",
    "crates/taudit-mcp",
]

[workspace.package]
edition = "2021"
rust-version = "1.88"
license = "AGPL-3.0-or-later"
authors = ["Ryan Tilcock"]
repository = "https://github.com/0ryant/taudit"
homepage = "https://github.com/0ryant/taudit"
documentation = "https://github.com/0ryant/taudit/blob/main/USERGUIDE.md"
keywords = ["security", "authority-graph", "github-actions", "azure-devops", "gitlab-ci"]
categories = ["command-line-utilities", "development-tools", "development-tools::testing"]

[workspace.dependencies]
taudit-api = { version = "3.1.0-pre", path = "crates/taudit-api" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
anyhow = "1"
jsonschema = "0.46"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
colored = "3"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
ureq = { version = "3", features = ["json"] }
sha2 = "0.11"
sha1 = "0.11"
semver = "1"
blake3 = "1"
tempfile = "3"

# Shared Algol/AXIOM doctrine crates (pattern 07/09/11 + ADR-0003 BLAKE3),
# pinned to the keystone rev so the on-disk audit/receipt bytes are identical
# across the cohort.
axiom-hash = { git = "https://github.com/0ryant/axiom-doctrine-rs.git", rev = "3f09282" }
axiom-canonical = { git = "https://github.com/0ryant/axiom-doctrine-rs.git", rev = "3f09282" }
axiom-exit = { git = "https://github.com/0ryant/axiom-doctrine-rs.git", rev = "3f09282" }
axiom-audit = { git = "https://github.com/0ryant/axiom-doctrine-rs.git", rev = "3f09282" }
axiom-receipt = { git = "https://github.com/0ryant/axiom-doctrine-rs.git", rev = "3f09282" }

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3
