[package]
name = "taudit-api"
version = "3.1.0-pre"
description = "Stable wire types for taudit JSON / SARIF / CloudEvents output. Public contract for downstream consumers (tsign, axiom, custom integrations). Versioned in lockstep with the taudit workspace."
readme = "README.md"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/taudit-api"
keywords = ["security", "ci-cd", "sarif", "cloudevents", "authority-graph"]
categories = ["development-tools", "development-tools::testing"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
