[package]
name = "taudit"
description = "CI/CD authority graph analyzer: how credentials, tokens, and artifacts propagate across pipelines—implicit trust-boundary breaks and non-obvious privilege escalation. Graph-first; not a YAML linter, generic scanner, or policy engine."
version = "1.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[[bin]]
name = "taudit"
path = "src/main.rs"

[dependencies]
taudit-core = { version = "2.0.0", path = "../taudit-core" }
taudit-parse-gha = { version = "2.0.0", path = "../taudit-parse-gha" }
taudit-parse-ado = { version = "2.0.0", path = "../taudit-parse-ado" }
taudit-parse-gitlab = { version = "2.0.0", path = "../taudit-parse-gitlab" }
taudit-parse-bitbucket = { version = "2.0.0", path = "../taudit-parse-bitbucket" }
taudit-report-terminal = { version = "2.0.0", path = "../taudit-report-terminal" }
taudit-report-json = { version = "2.0.0", path = "../taudit-report-json" }
taudit-report-sarif = { version = "2.0.0", path = "../taudit-report-sarif" }
taudit-sink-cloudevents = { version = "2.0.0", path = "../taudit-sink-cloudevents" }
chrono = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
anyhow = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }
colored = { workspace = true }
ureq = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
serde_yaml = { workspace = true }
jsonschema = { workspace = true }
insta = { version = "1.43", features = ["yaml"] }
