[package]
name = "taudit-core"
description = "Authority graph, propagation engine, finding rules — no I/O"
version = "0.9.4"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sha2 = { workspace = true }
sha1 = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "bench_propagation"
harness = false

[[bench]]
name = "bench_rules"
harness = false

[[bench]]
name = "bench_custom_rules"
harness = false
