[package]
name = "taudit-core"
description = "Deterministic authority graph and propagation engine for CI/CD: typed nodes, trust zones, and edges for how credentials and identities flow—used by graph analysis, not standalone linting."
version = "3.1.0-pre"
readme = "README.md"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/taudit-core"
keywords = ["security", "ci-cd", "authority-graph", "devsecops", "supply-chain"]
categories = ["development-tools", "development-tools::testing"]

[dependencies]
taudit-api = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sha1 = { workspace = true }
blake3 = { workspace = true }
thiserror = { workspace = true }
axiom-hash = { workspace = true }
axiom-canonical = { workspace = true }
axiom-exit = { workspace = true }
axiom-audit = { workspace = true }
axiom-receipt = { workspace = true }
hex = "0.4"

[dev-dependencies]
criterion = "0.8"
tempfile = { workspace = true }

[[bench]]
name = "bench_propagation"
harness = false

[[bench]]
name = "bench_rules"
harness = false

[[bench]]
name = "bench_custom_rules"
harness = false
