[package]
name = "taudit-mcp"
version = "0.1.0-pre"
edition = "2021"
license = "AGPL-3.0-or-later"
description = "MCP adapter for taudit — pipeline authority-graph scan / verify / graph / map / diff / baseline / remediate / invariants surface"

# mcpact deps resolve from crates.io (published 0.2.0, 2026-06-07) — no longer
# sibling path-deps. This unbreaks `cargo metadata`/CI, which has no mcpact
# checkout (the structural blocker behind taudit's main CI being red since
# 2026-05-19). Mirrors the aegress-mcp migration.
[dependencies]
async-trait = "0.1"
schemars = { version = "1.2", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
toml = "1.1"
sha2 = "0.10"
axiom-hash = { workspace = true }
mcpact-core = "0.2.0"
mcpact-runtime = "0.2.0"
mcpact-audit = "0.2.0"
mcpact-policy = "0.2.0"
mcpact-mcp = "0.2.0"
mcpact-manifest = "0.2.0"
