[package]
name = "taudit-parse-ado"
description = "Parses Azure DevOps YAML into taudit typed authority graphs for CI/CD propagation and trust-boundary analysis."
version = "3.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
taudit-core = { version = "3.0.0", path = "../taudit-core" }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
ureq = { workspace = true }
base64 = "0.22"

[dev-dependencies]
criterion = "0.8"

[[bench]]
name = "bench_parse"
harness = false
