[package]
name = "taudit-parse-bitbucket"
description = "Parses Bitbucket Pipelines YAML into taudit typed authority graphs for CI/CD propagation and trust-boundary analysis."
version = "1.1.0-rc.4"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true

[dependencies]
taudit-core = { version = "1.1.0-rc.4", path = "../taudit-core" }
serde = { workspace = true }
serde_yaml = { workspace = true }
