[package]
name = "taudit-parse-bitbucket"
description = "Parses Bitbucket Pipelines YAML into taudit typed authority graphs for CI/CD propagation and trust-boundary analysis."
version = "2.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true

[dependencies]
taudit-core = { version = "2.0.0", path = "../taudit-core" }
serde = { workspace = true }
serde_yaml = { workspace = true }
