[package]
name = "taudit-parse-gha"
description = "Parses GitHub Actions YAML into taudit typed authority graphs for CI/CD propagation and trust-boundary analysis."
version = "1.1.0-beta.2"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
taudit-core = { version = "1.1.0-beta.2", path = "../taudit-core" }
serde = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "bench_parse"
harness = false
