[package]
name = "taudit-parse-gitlab"
description = "GitLab CI YAML pipeline to AuthorityGraph parser"
version = "0.5.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
taudit-core = { version = "0.5.0", path = "../taudit-core" }
serde = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
