[package]
name = "taudit-parse-gitlab"
description = "Parses GitLab CI YAML into taudit typed authority graphs for CI/CD propagation and trust-boundary analysis."
version = "3.0.1"
readme = "README.md"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/taudit-parse-gitlab"
keywords = ["gitlab-ci", "security", "ci-cd", "authority-graph", "devsecops"]
categories = ["development-tools", "development-tools::testing", "parser-implementations"]

[dependencies]
taudit-core = { version = "3.0.1", path = "../taudit-core" }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
criterion = "0.8"

[[bench]]
name = "bench_parse"
harness = false
