[package]
name = "taudit-report-json"
description = "JSON report: typed authority graph and propagation-backed findings for taudit."
version = "3.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
taudit-core = { version = "3.0.0", path = "../taudit-core" }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
jsonschema = { workspace = true }
