[package]
name = "taudit-report-json"
description = "JSON report: typed authority graph and propagation-backed findings for taudit."
version = "3.0.1"
readme = "README.md"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/taudit-report-json"
keywords = ["json", "security", "ci-cd", "authority-graph", "devsecops"]
categories = ["development-tools", "development-tools::testing"]

[dependencies]
taudit-core = { version = "3.0.1", path = "../taudit-core" }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
jsonschema = { workspace = true }
