[package]
name = "taudit-report-sarif"
description = "SARIF 2.1.0 output adapter for taudit"
version = "1.0.2"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
taudit-core = { version = "1.0.2", path = "../taudit-core" }
serde = { workspace = true }
serde_json = { workspace = true }
