[package]
name = "taudit-report-sarif"
description = "SARIF 2.1.0 adapter for graph-backed pipeline findings from taudit (downstream of authority analysis)."
version = "1.1.0-rc.2"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
taudit-core = { version = "1.1.0-rc.2", path = "../taudit-core" }
serde = { workspace = true }
serde_json = { workspace = true }
