[package]
name = "taudit-report-sarif"
description = "SARIF 2.1.0 adapter for graph-backed pipeline findings from taudit (downstream of authority analysis)."
version = "3.1.0-pre"
readme = "README.md"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/taudit-report-sarif"
keywords = ["sarif", "security", "ci-cd", "authority-graph", "devsecops"]
categories = ["development-tools", "development-tools::testing"]

[dependencies]
taudit-core = { version = "3.1.0-pre", path = "../taudit-core" }
serde = { workspace = true }
serde_json = { workspace = true }
