[package]
name = "taudit-report-terminal"
description = "Terminal rendering of authority propagation paths and graph-backed findings for taudit."
version = "2.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
taudit-core = { version = "2.0.0", path = "../taudit-core" }
colored = { workspace = true }
