[package]
name = "taudit-report-terminal"
description = "Terminal rendering of authority propagation paths and graph-backed findings for taudit."
version = "3.0.1"
readme = "README.md"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/taudit-report-terminal"
keywords = ["terminal", "security", "ci-cd", "authority-graph", "devsecops"]
categories = ["development-tools", "development-tools::testing"]

[dependencies]
taudit-core = { version = "3.0.1", path = "../taudit-core" }
colored = { workspace = true }
