[package]
name = "taudit-sink-cloudevents"
description = "CloudEvents JSONL sink — one event per finding"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
taudit-core = { version = "0.2.0", path = "../taudit-core" }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
jsonschema = { workspace = true }
