[package]
name = "taudit-sink-cloudevents"
description = "CloudEvents JSONL sink: one event per graph-derived finding from taudit CI/CD authority analysis."
version = "1.1.0-beta.2"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
taudit-core = { version = "1.1.0-beta.2", path = "../taudit-core" }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
jsonschema = { workspace = true }
