[package]
name = "taudit-parse-gha-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

# Keep the fuzz crate out of the parent workspace; cargo-fuzz convention.
[workspace]

[dependencies]
libfuzzer-sys = "0.4"
taudit-parse-gha = { path = ".." }
taudit-core = { path = "../../taudit-core" }

[[bin]]
name = "parse_gha"
path = "fuzz_targets/parse_gha.rs"
test = false
doc = false
